<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/deep_screen_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/close_all_screens"
        android:id="@+id/close_all_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/close_screen_button"
        android:text="@string/close_this_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/open_menu_2"
        android:id="@+id/open_menu_2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/open_deep_screen"
        android:text="@string/open_new_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>