<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/navigation_menu_screen_1"
        android:text="@string/section_1"
        android:textSize="35sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/navigation_menu_screen_2"
        android:text="@string/section_2"
        android:textSize="35sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/navigation_menu_screen_3"
        android:text="@string/section_3"
        android:textSize="35sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>